[gd_scene load_steps=20 format=3 uid="uid://chuyw11rpm3ec"]

[ext_resource type="Script" uid="uid://dlfgvngdp2lwv" path="res://barkley2/scenes/Objects/_interactiveActor/_tirnanog/_clinic/o_tatijana01.gd" id="1_l50pu"]
[ext_resource type="Texture2D" uid="uid://djdctq307xksc" path="res://barkley2/assets/b2_original/images/merged/s_tatijana01.png" id="2_j3d1v"]
[ext_resource type="Script" uid="uid://brqjwvhoi8eux" path="res://barkley2/resources/B2_Cinema/B2_Script_Legacy.gd" id="2_leywr"]
[ext_resource type="AudioStream" uid="uid://c7s3jbnh7lbmg" path="res://barkley2/assets/b2_original/audio/NPC/sn_maria_paper3.ogg" id="3_leywr"]

[sub_resource type="Resource" id="Resource_2sdbw"]
script = ExtResource("2_leywr")
original_script = "IF govMedicine == 2   | GOTO | GIVE_MEDICINE
IF body == governor   | GOTO | GOVERNOR01
IF tatijanaState == 7 | GOTO | TATIJANA07
IF tatijanaState == 6 | GOTO | TATIJANA06
IF tatijanaState == 5 | GOTO | TATIJANA05
IF tatijanaState == 4 | GOTO | TATIJANA04
IF tatijanaState == 3 | GOTO | TATIJANA03
IF tatijanaState == 2 | GOTO | TATIJANA02
IF tatijanaState == 1 | GOTO | TATIJANA01
IF tatijanaState == 0 | GOTO | TATIJANA00

GIVE_MEDICINE
DIALOG | Dr. Tatijana | There's `kw`no more meds`rt` to give now that the Governor demanded everyone gets free access. I had to cut all my patients loose.
DIALOG | P_NAME       | (But I thought you could keep your old doctor...)

GOVERNOR02
DIALOG | Governor Elagabalus | Carry on!

GOVERNOR01
IF tatijanaGov == 1 | GOTO | GOVERNOR02
DIALOG | Dr. Tatijana | You... you're the new Governor, right? I didn't expect to see you here. What brings you to the clinic, Mr. Governor?
DIALOG | Governor Elagabalus | Hello! Hello, good citizen! I'm just doing my neighborhood watch duty and patrolling our great city. Keep an eye out for scofflaws and roustabouts! You never know where they'll turn up. Well, goodbye citizen!
QUEST  | tatijanaGov = 1

TATIJANA07
DIALOG | Dr. Tatijana | Remember not to overdo it out there.

TATIJANA06
DIALOG | Dr. Tatijana | Alright, everything is ready. Let's begin...
DIALOG | P_NAME       | I'm kinda nervous...
DIALOG | Dr. Tatijana | Well it's a big step, both financially and er..._ morally. Here, drink this.
USEAT  | o_tatijana01
DIALOG | P_NAME       | Er, okay...
SOUND  | sn_juicechug01
DIALOG | P_NAME       | What is it?
DIALOG | Dr. Tatijana | It's a `kw`potent tranquilizer and anesthetic.`rt` You'll be unconcious in no time.
DIALOG | P_NAME       | I don't reall...
WAIT   | 0.75
DIALOG | P_NAME       | ...
SOUND  | sn_hoopz_demiseBHROOM01
PLAYSET | o_cts_hoopz | demise | demiseEnd
WAIT   | 2.5
FADE   | 1 | 2
WAIT   | 2
FRAME  | CAMERA_FAST | o_cinema2
Misc   | set | o_cts_hoopz | o_cinema2
LOOK   | o_cts_hoopz  | SOUTH
WAIT   | 0.5
FADE   | 0 | 2
WAIT   | 3
LOOK   | o_cts_hoopz  | WEST
WAIT   | 0.5
LOOK   | o_cts_hoopz  | SOUTH
WAIT   | 0.5
LOOK   | o_cts_hoopz  | EAST
WAIT   | 0.5
LOOK   | o_cts_hoopz  | SOUTH
WAIT   | 1.5
DIALOG | P_NAME       | Ugh...
WAIT   | 0.5
DIALOG | P_NAME       | W-what...? Where am I?
WAIT   | 0.5
MOVETO | o_cts_hoopz  | o_cinema3 | MOVE_SLOW
WAIT   | 0
WAIT   | 0.25
FRAME  | CAMERA_NORMAL | o_cinema3
LOOK   | o_cts_hoopz  | SOUTHEAST
WAIT   | 1.0
MOVETO | o_cts_hoopz  | o_cinema4 | MOVE_NORMAL
WAIT   | 0
LOOK   | o_cts_hoopz  | NORTHWEST
DIALOG | Dr. Tatijana | Hmm, up already, are we?
DIALOG | P_NAME       | H-hey, what happened?
DIALOG | Dr. Tatijana | You don't remember?
DIALOG | P_NAME       | No...
DIALOG | Dr. Tatijana | Hmm, very interesting...
DIALOG | Dr. Tatijana | You have just undergone an abrubt cyberification procedure. How are you feeling?
DIALOG | P_NAME       | I... I feel kinda hazy...
DIALOG | Dr. Tatijana | That's to be expected. Don't worry, it should easy up momentarily.
DIALOG | P_NAME       | The procedure... Oh, now I remember!
WAIT   | 0.75
DIALOG | P_NAME       | Am I transhumanized now?
EVENT  | o_tatijana01 | 3
EVENT  | o_tatijana01 | 2
DIALOG | Dr. Tatijana | Transhumanism is so complex that a statement like that is meaningless on it's own, but I can tell you that you are now `mq`@transhumanism@% CYBER.`rt`
DIALOG | P_NAME       | W-wow...
DIALOG | P_NAME       | I don't feel that different though.
DIALOG | Dr. Tatijana | Nor should you as long as the cybernetic parts are working as intended. 
DIALOG | P_NAME       | I can't `w1`WAIT`w0` to brast some ghoulies.
DIALOG | Dr. Tatijana | Just remember not to overdo it.
QUEST  | tatijanaState = 7

TATIJANA05
DIALOG | Dr. Tatijana | I'm still preparing the room. Come back a bit later.

TATIJANA04
DIALOG | Dr. Tatijana | Ah the amnesiac, thought more about the procedure?
GOTO   | TRANSHUMANISM

TATIJANA03
DIALOG | Dr. Tatijana | You... what was it again... `kw`morgellons?`rt`
DIALOG | P_NAME       | Oh no, not me, I have amnesia.
DIALOG | Dr. Tatijana | Right right, amnesia. Did you get `sq`The Grape?`rt`
IF knowGrape == 3 | GOTO | DRANKGRAPE
GOTO   | NODRANKGRAPE

NODRANKGRAPE
DIALOG | P_NAME       | Oh uh, darn I forgot to.
DIALOG | Dr. Tatijana | I see, the amnesia is more pronounced than I thought... we might need to upgrade your gray matter with an SSD or some permanent tape archive...
DIALOG | P_NAME       | What do you mean?
DIALOG | Dr. Tatijana | We'll get to that later, come back in an hour, with some `sq`Grape`rt` in you this time.
DIALOG | P_NAME = s_port_hoopzHappy | You got it!
QUEST  | tatijanaState = 2
ClockTime | event | tatijanaState | 3 | 45

DRANKGRAPE
DIALOG | P_NAME       | Yeah I got some `sq`Grape,`rt` no big deal. I drink The Grape all the time.
DIALOG | Dr. Tatijana | And do you remember anything from your past?
DIALOG | P_NAME       | Ummm, not really. In fact I kinda felt even more hazy.
DIALOG | Dr. Tatijana | Hmmmm. Must be `kw`Cybiotic Interference.`rt`
DIALOG | P_NAME = s_port_hoopzSurprise | Cyba-wha?
DIALOG | Dr. Tatijana | Look kid, don't you have `kw`WebMD`rt` or something? That is just as good as a real doctor, look it up.
DIALOG | P_NAME = s_port_hoopzSad | I don't remember what that is either...
WAIT   | 1.0
DIALOG | Dr. Tatijana | Hmmm, alright kid, here listen. Cybiotic Interference. It's when your Biological self conflicts with your `kw`Cyberized Enhancements.`rt` 
DIALOG | Dr. Tatijana | You know what `sq`Transhumanism`rt` is, right?_ The modification of the body to become something else-something greater.
DIALOG | P_NAME       | Yeah, I guess that makes sense.
DIALOG | Dr. Tatijana | It's like this: you stick your fleshy hand in an industrial fan, lose your hand. You get shot in the head, lose some gray matter. No big deal, we just add in some `kw`Cybiotic Prosthetics.`rt` A new frontal plasticortex for your brain, an `sq`AutoClaw`rt` for your mangled fingers... bam, you're Transhuman.
CHOICE | Transhumanism...
REPLY  | SOUNDS_COOL   | Sounds cool.
REPLY  | SOUNDS_DANGER | Sounds dangerous.

SOUNDS_COOL
DIALOG | P_NAME       | Sounds cool.
DIALOG | Dr. Tatijana | Cool? That's one way to look at it. 
DIALOG | Dr. Tatijana | Hmm... I can see that you are pro-cybernetics yourself. You must be at least ten to fifteen percent CYBER.
DIALOG | P_NAME = s_port_hoopzSurprise | I-I am?
DIALOG | Dr. Tatijana | You didn't know that? Your amnesia must be much worse than I first thought. 
DIALOG | P_NAME       | Yeah, I can't remember where I got these parts from or who installed them. Spooky...
DIALOG | Dr. Tatijana | That's Transhumanism for you. People go to sleep and wake up with scars all over them and their spleens missing or something like that. Then they crawl over here to get fixed up.
DIALOG | Dr. Tatijana | You seem to have gotten lucky. Whoever took you apart actually put you back together with some fairly decent looking cybernetics.
DIALOG | Dr. Tatijana | These poor Dwarfs on the other hand have a knack of getting in front of a Duergar's fist, and I'm the one who has to put them back together, so business is booming in Transhumanism. 
DIALOG | Dr. Tatijana | I pull out their damaged body parts and slip in something with a lot less `kw`BIO Damage Vulnerability.`rt` 
DIALOG | Dr. Tatijana | I can do the same for you. If you need a boost to your `kw`Cyber-Identity,`rt` you let me know. It ain't cheap, but it's worth it.
DIALOG | P_NAME       | I... I'll think about it.
QUEST  | knowTranshuman += 1
KNOW   | knowBraincity | 1
GOTO   | TRANSHUMANISM

SOUNDS_DANGER
DIALOG | P_NAME       | Sounds dangerous.
DIALOG | Dr. Tatijana | That's where you're wrong. The danger is in the flesh. That's the stuff that's hard to replicate, hard to grow. 
DIALOG | Dr. Tatijana | Your AutoClaw can be repaired, replaced, and even upgraded. That's why you see so many Dwarfs walking around over fifty percent `kw`CYBER.`rt` Not in Tir na nOg as much, sure, but `mq`Brain City`rt` is filled with transhumanistic Dwarfs. 
DIALOG | Dr. Tatijana | Hell, just looking at you_ I can tell you are at least `kw`@transhumanism@% CYBER`rt` already.
DIALOG | P_NAME = s_port_hoopzSurprise | I-I am?
DIALOG | Dr. Tatijana | Yeah you probably got cybiotic upgrades and never even realized it. You think that's your jaw you are using to chew your candy?_ Wrong, that's a `kw`/'Pneumati-Chew,/'`rt`_ as common among Dwarfs as a Vidcon Cerebro-link.
DIALOG | P_NAME       | I still have a lot to learn.
QUEST  | knowTranshuman += 1
KNOW   | knowBraincity | 1
GOTO   | TRANSHUMANISM

TRANSHUMANISM
CHOICE | Transhumanism, huh...
REPLY  | JERKINS | Can't I just equip a resistant jerkin?
REPLY  | LATER   | Maybe you can tell me later, I have to return some videotapes.
REPLY  | RATES   | What are your rates?

JERKINS
DIALOG | P_NAME       | Can't I just equip a `kw`CYBER Resistant jerkin?`rt`
DIALOG | Dr. Tatijana | `kw`Resistance`rt` isn't the only story. Whatever damage goes through the jerkin is exponentially affected by your transhumanism. Not much good a BIO Bullet can do to a 100% CYBER Fullbot Dwarf.
DIALOG | P_NAME       | Oh... so this whole damage thing is a lot more complicated than it looks on the surface...
DIALOG | Dr. Tatijana | Way more complicated, but hey, that's science. We're just gonna have to deal with it.
DIALOG | P_NAME       | Gotcha.
QUEST  | knowJerkins += 1
QUEST  | knowTranshuman += 1
GOTO   | TRANSHUMANISM

RATES
DIALOG | P_NAME       | What are your rates?
BREAKOUT | add | money
DIALOG | Dr. Tatijana | Well it's `kw`@money_tatijana20@`rt` neuro-shekels for a general `sq`20% boost in Cyberization.`rt` That means you'll be affected much less by `kw`Biotic Forces.`rt`
IF player.deaths.total >= 3 | DIALOG | Dr. Tatijana | From the smell of you I can tell you've been lingering in the Sewers... lots of BIO Damage down there. Some transhumanism will help you.
IF player.deaths.total <= 2 | DIALOG | Dr. Tatijana | Well it doesn't smell like you've been in the Sewers all that much, but let me tell you: the baddies down there, all BIO Damage. That means tweaking your transhumanism towards the `kw`/'Cybersyde/'`rt` is a good strategy. The less meat you have on your body, the less those poison darts of the Fiscians can hurt you y'know?
DIALOG | P_NAME       | I didn't know that would have such an effect...
DIALOG | Dr. Tatijana | After my surgeries, BIO Damage will slide off you like postnasal-drip on Teflon. What do you say?
IF money >= @money_tatijana20@ | GOTO | SURGERYCHOICE
GOTO   | SURGERYPOOR

LATER
DIALOG | P_NAME       | Maybe you can tell me later, I have to return some videotapes.
DIALOG | Dr. Tatijana | Take care, and good luck.

SURGERYPOOR
DIALOG | P_NAME       | Hmmm. Doesn't look like I have the scratch...
BREAKOUT | clear
DIALOG | Dr. Tatijana | Not many do. I'll be here if your situation changes.
DIALOG | P_NAME       | Okay thanks, Doc.
QUEST  | tatijanaState = 4

SURGERYCHOICE
CHOICE | What don't you like about yourself?
REPLY  | COMMENCESURGERY | I would like to get more metal in me!
REPLY  | THINKITOVER     | I need to wait and think this over.

COMMENCESURGERY
DIALOG | P_NAME       | I think I'm ready for the surgery... 
DIALOG | P_NAME       | I want shed my old Biotic form and achieve metamorphosis to a `kw`state of Cyberization.`rt`
QUEST  | money -= @money_tatijana20@
DIALOG | Dr. Tatijana | You're ready, huh? I'll get the operating room ready. Come back in one hour. In that time you should try to avoid eating or drinking anything. Only light meals like candy or grapes are allowed.
BREAKOUT | clear
DIALOG | P_NAME       | Okay, so no candy?
DIALOG | Dr. Tatijana | No candy, no nothing.
DIALOG | P_NAME       | Okay, I'll be back!
QUEST  | tatijanaState = 5
ClockTime | event | tatijanaState | 6 | 45

THINKITOVER
DIALOG | P_NAME       | I think I need to think this over. It's a big step.
BREAKOUT | clear
DIALOG | Dr. Tatijana | That's fine. I'll be here.

TATIJANA02
DIALOG | Dr. Tatijana | Most people don't like to hang around a clinic... what makes you different?
DIALOG | P_NAME       | Oh... um nothing I think I'm going to go.
DIALOG | Dr. Tatijana | Get some of `kw`The Grape`rt` and see me in an hour.
DIALOG | P_NAME       | Ok!

TATIJANA01
DIALOG | Dr. Tatijana | Gonna tell me what's wrong this time?
DIALOG | P_NAME       | Oh uh right...
GOTO   | AILMENT

TATIJANA00
DIALOG | Dr. Tatijana | What's your problem?
DIALOG | P_NAME       | Oh sorry I didn't know I couldn't be here.
DIALOG | Dr. Tatijana | You can... it's a `kw`clinic.`rt` What's your problem?
DIALOG | P_NAME       | Oh, I see...
QUEST  | tatijanaState = 1
GOTO   | AILMENT

AILMENT
CHOICE | What seems to the be problem?
REPLY  | AMNESIA | Amnesia.
REPLY  | NOTHING | Nothing.

AMNESIA
DIALOG | P_NAME       | I don't know who I am or where I came from... I think I might have been born out of an egg.
WAIT   | 0.5
DIALOG | Dr. Tatijana | Hmmm...
WAIT   | 1.0
DIALOG | Dr. Tatijana | `kw`Grapes,`rt` twice a day.
DIALOG | P_NAME       | Grapes?
DIALOG | Dr. Tatijana | Yes, grapes.
IF knowGrape >= 3 | GOTO | DRANKGRAPE
DIALOG | P_NAME       | How are grapes going to help me?
DIALOG | Dr. Tatijana | They contain an abundance of vitamins and plenty of other important things... tannins maybe... stuff like that. You aren't allergic are you?
DIALOG | P_NAME       | To grapes?
DIALOG | Dr. Tatijana | Allergic to anything... grapes, Garlics, slamicite?
DIALOG | P_NAME       | Um I want to say... `kw`diabetes?`rt`
DIALOG | Dr. Tatijana | Hmmm...
WAIT   | 1.0
DIALOG | Dr. Tatijana | Grapes, thrice a day._ How old are you?
DIALOG | P_NAME       | I don't know, I have amnesia, remember?
DIALOG | Dr. Tatijana | Good. Come and see me in an hour. Until then, get to a bar and drink some of `kw`The Grape.`rt`
DIALOG | P_NAME       | Okay... thanks I guess...
QUEST  | tatijanaState = 2
ClockTime | event | tatijanaState | 3 | 55

NOTHING
DIALOG | P_NAME       | Nothing...
DIALOG | Dr. Tatijana | Then why are you here?
DIALOG | P_NAME       | I don't know. Bye!"
metadata/_custom_type_script = "uid://brqjwvhoi8eux"

[sub_resource type="AtlasTexture" id="AtlasTexture_leywr"]
atlas = ExtResource("2_j3d1v")
region = Rect2(0, 0, 39, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sdbw"]
atlas = ExtResource("2_j3d1v")
region = Rect2(39, 0, 39, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwjre"]
atlas = ExtResource("2_j3d1v")
region = Rect2(78, 0, 39, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbyij"]
atlas = ExtResource("2_j3d1v")
region = Rect2(117, 0, 39, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_83l85"]
atlas = ExtResource("2_j3d1v")
region = Rect2(156, 0, 39, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_opv22"]
atlas = ExtResource("2_j3d1v")
region = Rect2(195, 0, 39, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_0x5ur"]
atlas = ExtResource("2_j3d1v")
region = Rect2(234, 0, 39, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0j0m"]
atlas = ExtResource("2_j3d1v")
region = Rect2(273, 0, 39, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksg35"]
atlas = ExtResource("2_j3d1v")
region = Rect2(312, 0, 39, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_4imn7"]
atlas = ExtResource("2_j3d1v")
region = Rect2(351, 0, 39, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_uogid"]
atlas = ExtResource("2_j3d1v")
region = Rect2(390, 0, 39, 42)

[sub_resource type="SpriteFrames" id="SpriteFrames_wyjfp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_leywr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sdbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwjre")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbyij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83l85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opv22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0x5ur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0j0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksg35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4imn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uogid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbyij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwjre")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sdbw")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_pwjre"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yfw7x"]
size = Vector2(20, 36)

[node name="o_tatijana01" type="CharacterBody2D" node_paths=PackedStringArray("mouse_detection_area", "ActorAnim", "ActorCol")]
script = ExtResource("1_l50pu")
is_interactive = null
interactive_timer = null
interactive_shader = null
mouse_detection_area = NodePath("ActorInteract")
interactive_distance = null
player_can_pause = null
cutscene_script = SubResource("Resource_2sdbw")
cutscene_script_mask = null
debug_move_finish = null
debug_check_movement_vector = null
cast_shadow = null
ActorAnim = NodePath("ActorAnim")
flip_h = null
has_collision = null
ActorCol = NodePath("ActorCol")
can_move_around = false
_automatic_animation = null
_current_animation = null
path_desired_distance = null
target_desired_distance = null
animation_speed = null
disable_auto_flip_h = null

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_leywr")
max_distance = 500.0
bus = &"Audio"

[node name="ActorAnim" type="AnimatedSprite2D" parent="."]
use_parent_material = true
sprite_frames = SubResource("SpriteFrames_wyjfp")
frame = 13
frame_progress = 1.0
centered = false
offset = Vector2(-16, -37)
metadata/default = {
"bbox_bottom": "39",
"bbox_left": "3",
"bbox_right": "27",
"bbox_top": "28",
"frames": ["images\\s_tatijana01_0.png", "images\\s_tatijana01_1.png", "images\\s_tatijana01_2.png", "images\\s_tatijana01_3.png", "images\\s_tatijana01_4.png", "images\\s_tatijana01_5.png", "images\\s_tatijana01_6.png", "images\\s_tatijana01_7.png", "images\\s_tatijana01_8.png", "images\\s_tatijana01_9.png", "images\\s_tatijana01_10.png"],
"height": "42",
"name": "s_tatijana01",
"width": "39",
"xorig": "16",
"yorigin": "37"
}

[node name="ActorCol" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_pwjre")

[node name="ActorInteract" type="Area2D" parent="."]
position = Vector2(0, -13)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActorInteract"]
shape = SubResource("RectangleShape2D_yfw7x")

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="animation_finished" from="ActorAnim" to="." method="_on_actor_anim_animation_finished"]
[connection signal="frame_changed" from="ActorAnim" to="." method="_on_actor_anim_frame_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
